reintegração da página info_escola| progresso na filtragem

--- a/public/html/404.html
+++ b/public/html/404.html
@@ -73,7 +73,7 @@ Free Bootstrap 5 HTML Template
       <div class="d-flex justify-content-center p-5 m-3">
         <button
           class="nav-link m-3"
-          onclick="location.assign('../html/index.html')"
+          onclick="location.assign('home')"
         >
           <p class="m-2">Clique aqui pra voltar para a página principal</p>
         </button>
