--- a/public/html/info-escola.html
+++ b/public/html/info-escola.html
@@ -135,7 +135,7 @@
                       </div>-->
 
             <!-- JAVASCRIPT FILES -->
-
+            <script src='../js/info-escola.js' type="module"></script>
             <!--CABEÇALHO NAO MEXA-->
             <script src="../js/components/header.js"></script>
           </body>
