--- a/public/html/visualiz-escolas.html
+++ b/public/html/visualiz-escolas.html
@@ -62,9 +62,9 @@ Free Bootstrap 5 HTML Template
                   
                     <div class="" style="display:block">
                       
-                        <nav style="display:block">
-                          <section class="justify-content-center align-self-center " id="section_4">
-                        <div class="bloco about-thumb shadow-lg" style="background-color: #B7EA90;">
+                      <nav style="display:block">
+                        <section class="justify-content-center align-self-center " id="section_4">
+                          <div class="bloco about-thumb shadow-lg" style="background-color: #B7EA90;">
                             <div class="col-15 justify-content-center align-self-center position-center" style="height:20%;">
                               <div class="search-box" style="display: block; padding-bottom: 12.5%;">
                                 <h4>Série:</h4>
@@ -73,7 +73,8 @@ Free Bootstrap 5 HTML Template
                                 <div class="search-box" style="display: block;">
                                   <h4>Turno:</h4>
                                   <input type="text" placeholder="Digite para filtrar" style="width: 240px;border: 1px solid black;border-radius: 10px; height: 35px;">
-                              </div>
+                                </div>
+                                <button class="btn filter-schools">Filtrar</button>
                               </div>
                             </div>
                           </div>
