Filtro funcionando com series

--- a/public/html/visualiz-escolas.html
+++ b/public/html/visualiz-escolas.html
@@ -68,11 +68,11 @@ Free Bootstrap 5 HTML Template
                             <div class="col-15 justify-content-center align-self-center position-center" style="height:20%;">
                               <div class="search-box" style="display: block; padding-bottom: 12.5%;">
                                 <h4>Série:</h4>
-                                    <input type="text" placeholder="Digite para filtrar" style="width: 240px;border: 1px solid black;border-radius: 10px; height: 35px;">
+                                    <input type="text" placeholder="Digite para filtrar" id="filter-name-schools" style="width: 240px;border: 1px solid black;border-radius: 10px; height: 35px;">
                                 </div>
                                 <div class="search-box" style="display: block;">
                                   <h4>Turno:</h4>
-                                  <input type="text" placeholder="Digite para filtrar" style="width: 240px;border: 1px solid black;border-radius: 10px; height: 35px;">
+                                  <input type="text" placeholder="Digite para filtrar" id="filter-turn-schools" style="width: 240px;border: 1px solid black;border-radius: 10px; height: 35px;">
                                 </div>
                                 <button class="btn filter-schools">Filtrar</button>
                               </div>
