Adição de vagas

--- a/public/html/visualiz-escolas.html
+++ b/public/html/visualiz-escolas.html
@@ -50,7 +50,7 @@ Free Bootstrap 5 HTML Template
     <main>
         <section class="services section-padding" id="section_3">
           <div class="col-lg-10 col-12 text-start" style="position: relative; top: 0; left: 0;">
-            <h2 style="margin-top: 0; margin-left:10%; font-size: 37px;" class="" >Filtro de Escolas</h2>
+            <h2 style="margin-top: 0; margin-left:9.5%; font-size: 37px;" class="" >Filtro de Escolas</h2>
           </div>
             <div class="container" style="display: flex; margin-left: 5%; margin-right: 5%;">
               
@@ -64,7 +64,7 @@ Free Bootstrap 5 HTML Template
                       
                       <nav style="display:block">
                         <section class="justify-content-center align-self-center " id="section_4">
-                          <div class="bloco about-thumb shadow-lg" style="background-color: #B7EA90;">
+                          <div class="bloco about-thumb shadow-lg" style="background-color: #B7EA90; padding: 22.5px;">
                             <div class="col-15 justify-content-center align-self-center position-center" style="height:20%;">
                               <div class="search-box" style="display: block; padding-bottom: 12.5%;">
                                 <h4>Série:</h4>
@@ -74,7 +74,7 @@ Free Bootstrap 5 HTML Template
                                   <h4>Turno:</h4>
                                   <input type="text" placeholder="Digite para filtrar" id="filter-turn-schools" style="width: 240px;border: 1px solid black;border-radius: 10px; height: 35px;">
                                 </div>
-                                <button class="btn filter-schools">Filtrar</button>
+                                <button class="btn btn_dark filter-schools" style="border-radius: 7.5%;border-color: black; border-width: 3px; float: right; margin-top: 15px; background-color: #8fd659;">Filtrar</button>
                               </div>
                             </div>
                           </div>
