--- a/public/html/cadastro.html
+++ b/public/html/cadastro.html
@@ -111,19 +111,19 @@
 
     <div class="div-menor div-menor-direita" style="margin-top:-60px;">
     <div style="width:400px; height:600px">  
-    <form method="post" onsubmit="return cadastroRedirecionar()">
+    <form method="post" action="/cadastro" >
       <h2 style="text-align:center">CADASTRE-SE</h2> <br>
 
       <label for="username" ></label>
-      <input type="text" id="username" placeholder="Nome" onfocus="limparTexto(this)" onblur="restaurarTexto(this)" required>
+      <input type="text" id="username" name="username" placeholder="Nome" onfocus="limparTexto(this)" onblur="restaurarTexto(this)" required>
       <br>
 
       <label for="email"></label>
-      <input type="email" id="email" placeholder="Email" onfocus="limparTexto(this)" onblur="restaurarTexto(this)" required>
+      <input type="email" id="email" name="email" placeholder="Email" onfocus="limparTexto(this)" onblur="restaurarTexto(this)" required>
       <br>
 
       <label for="password"></label>
-      <input type="password" id="password" placeholder="Senha" onfocus="limparTexto(this)" onblur="restaurarTexto(this)" required>
+      <input type="password" id="password" name="password" placeholder="Senha" onfocus="limparTexto(this)" onblur="restaurarTexto(this)" required>
       <br> <br>
 
       <input type="submit" value="Cadastrar">
