Vagas no banco de dados

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -156,39 +156,12 @@ Free Bootstrap 5 HTML Template
                       <div class="about-thumb d-flex justify-content-center align-self-center position-center mb-lg-0 h-100" style="background-color: #D6FEB7;">
                         <div class="about-info align-self-center">
                           <h4 class="mb-3" style="text-align:center">Vagas Disponíveis por Turma</h4>
-                          <table style="min-width: 450px;">
+                          <table id="turma-container"style="min-width: 450px;">
                             <tr>
                               <th>Turmas</th>
                               <th>Vagas Ofertadas</th>
                               <th>Vagas Disponiveis</th>
-                            </tr>
-                            <tr>
-                              <td>1°</td><td>297.034</td> <td>237.390</td>
-                            </tr>
-                            <tr>
-                              <td>2°</td><td>271.550</td> <td>197.463</td>
-                            </tr>
-                            <tr>
-                              <td>3°</td><td>270.061</td> <td>203.124</td>
-                            </tr>
-                            <tr>
-                              <td>4°</td><td>257.534</td> <td>213.370</td>
-                            </tr>
-                            <tr>
-                              <td>5°</td><td>244.009</td> <td>231.467</td>
-                            </tr>
-                            <tr>
-                              <td>6°</td><td>238.018</td> <td>167.847</td>
-                            </tr>
-                            <tr>
-                              <td>7°</td><td>236.597</td> <td>218.029</td>
-                            </tr>
-                            <tr>
-                              <td>8°</td><td>212.005</td> <td>192.536</td>
-                            </tr>
-                            <tr>
-                              <td>9°</td><td>198.014</td> <td>170.351</td>
-                            </tr>
+                           </tr>
                           </table>
                         </div>
                       </div>
@@ -197,20 +170,11 @@ Free Bootstrap 5 HTML Template
                       <div class="about-thumb d-flex justify-content-center align-self-center position-center mb-lg-0" style="background-color: #D6FEB7; height: 325px;">
                         <div class="about-info align-self-center">
                           <h4 class="mb-3" style="text-align:center">Vagas Disponíveis por Turno</h4>
-                          <table style="min-width: 450px;">
+                          <table id="turno-container"style="min-width: 450px;">
                             <tr>
                               <th>Turno</th>
                               <th>Vagas Ofertadas</th>
                               <th>Vagas Disponiveis</th>
-                            </tr>
-                            <tr>
-                              <td>Manhã</td><td>297.034</td> <td>237.390</td>
-                            </tr>
-                            <tr>
-                              <td>Tarde</td><td>271.550</td> <td>197.463</td>
-                            </tr>
-                            <tr>
-                              <td>Noite</td><td>270.061</td> <td>203.124</td>
                             </tr>
                           </table>
                         </div>
@@ -304,7 +268,7 @@ Free Bootstrap 5 HTML Template
     </footer>
 
   <!-- JAVASCRIPT FILES -->
-
+<script src="../js/vagas.js"></script>
   <!--CABEÇALHO NAO MEXA-->
   <script src="../js/components/header.js"></script>
 </body>
