--- a/public/html/visualiz-escolas.html
+++ b/public/html/visualiz-escolas.html
@@ -114,6 +114,7 @@ Free Bootstrap 5 HTML Template
 
   <!-- JAVASCRIPT FILES -->
   <script src='../js/visualiz-escolas.js' type="module"></script>
+  <script src="./js/home.js" type="module"></script>
   <!--CABEÇALHO NAO MEXA-->
   <script src="../js/components/header.js"></script>
 </body>
