--- a/public/html/404.html
+++ b/public/html/404.html
@@ -59,7 +59,7 @@ Free Bootstrap 5 HTML Template
   <body id="section_1">
     <nav class="navbar navbar-expand-lg bg-white shadow-lg navbar-component-js"></nav>
 
-    <section class="services">
+    <section class="p-5 m-3">
       <h1 class="d-flex justify-content-center" style="font-size: 96px">
         ERROR 404
       </h1>
@@ -70,17 +70,17 @@ Free Bootstrap 5 HTML Template
         botão, &nbsp <strong>Retornar</strong> &nbsp para voltar para página
         principal
       </p>
-      <div class="d-flex justify-content-center p-5 m-3">
+      <div class="d-flex justify-content-center p-1 m-3">
         <button
           class="nav-link m-3"
           onclick="location.assign('home')"
         >
-          <p class="m-2">Clique aqui pra voltar para a página principal</p>
+          <p class="m-2 fs-4">Clique aqui pra voltar para a página principal</p>
         </button>
       </div>
     </section>
 
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="pt-5">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -1 1440 320" class="pt-5">
       <path
         fill=" #B7EA90"
         fill-opacity="10"
