Restrições de senha

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -215,7 +215,7 @@ Free Bootstrap 5 HTML Template
 
                   <div class="row">
                     <div class="col-lg-6 col-md-6 col-12">
-                      <input type="email" name="email" id="email" class="form-control" placeholder="E-mail" required="">
+                      <input type="email" name="email" id="email" class="form-control" placeholder="E-mail" required>
                     </div>
 
                     <div class="col-lg-6 col-md-6 col-12">
@@ -228,7 +228,7 @@ Free Bootstrap 5 HTML Template
                     </div>
 
                     <div class="col-12">
-                      <textarea class="form-control" rows="7" id="message" name="message"
+                      <textarea class="form-control" rows="7" id="message" name="message" required
                         placeholder="Descrição"></textarea>
 
                       <button type="submit" class="form-control" style="color:black";>Enviar</button>
