--- a/public/html/credenciais.html
+++ b/public/html/credenciais.html
@@ -168,7 +168,7 @@
       }
 
       //----------------------------------------------
-      //FUNCAO LOGIN
+      //FUNCAO MUDAR FOTO
       const form = document.querySelector("form");
       form.addEventListener("submit", async (e) => {
         e.preventDefault();
@@ -199,14 +199,6 @@
           const response = await fetch("http://localhost:3000/user/image", options);
           const userData = await response.json();
 
-          if(userData.isValid){
-            //armazenamento do navegador
-            localStorage.setItem("authToken", userData.token);
-            localStorage.setItem("user", JSON.stringify(userData.User));
-            window.location.href = "./home"
-          }else{
-            alert(userData.error)
-          }
         } catch (error) {
           console.log(error);
           alert("algo deu errado")
