--- a/public/html/credenciais.html
+++ b/public/html/credenciais.html
@@ -115,22 +115,18 @@
 
           <br />
           <label for="foto"></label>
-          <input
-            type="file"
-            id="foto"
-            name="foto"
-            placeholder="Foto"
+          <input type="file" id="image" name="image" placeholder="Foto" 
             onfocus="limparTexto(this)"
             onblur="restaurarTexto(this)"
             required
             style="padding: 20px"
           />
-          <label for="usuario"></label>
+          <label for="email"></label>
           <input
             type="email"
-            id="usuario"
-            name="usuario"
-            placeholder="Usuario"
+            id="email"
+            name="email"
+            placeholder="email"
             onfocus="limparTexto(this)"
             onblur="restaurarTexto(this)"
             required
@@ -171,39 +167,35 @@
       //FUNCAO MUDAR FOTO
       const form = document.querySelector("form");
       form.addEventListener("submit", async (e) => {
-        e.preventDefault();
+  e.preventDefault();
 
-        //pegando os inputs do formulario
-        const data = Object.fromEntries(new FormData(form));
-        console.log(data);
-        usuario = JSON.parse(localStorage.getItem("user"))
-        id = usuario.id
-        const isAuthenticated = localStorage.getItem('authToken'); 
-        try {
-          //opções padroes
-          const options = {
-            method: "PUT",
-            headers: {
-              "Content-Type": "application/json",
-              'Authorization': `Bearer ${isAuthenticated}`,
-            },
-            body: JSON.stringify({
-              image: data.foto,
-              email: data.email,
-              userId: id
-              
-          })};
+  const formData = new FormData(form); // Use FormData para capturar o arquivo corretamente
 
-          //enviando login para o back
-          // fazendo a requisição
-          const response = await fetch("http://localhost:3000/user/image", options);
-          const userData = await response.json();
+  usuario = JSON.parse(localStorage.getItem("user"));
+  id = usuario.id;
 
-        } catch (error) {
-          console.log(error);
-          alert("algo deu errado")
-        }
-      });
+  const isAuthenticated = localStorage.getItem("authToken");
+
+  try {
+    const options = {
+      method: "PUT",
+      headers: {
+        Authorization: `Bearer ${isAuthenticated}`, // Remova 'Content-Type'
+      },
+      body: formData, // Envie o FormData diretamente
+    };
+   
+    const response = await fetch("http://localhost:3000/user/image", options);
+    const userData = await response.json();
+
+    console.log(userData);
+    alert("Imagem enviada com sucesso!");
+  } catch (error) {
+    console.error(error);
+    alert("Algo deu errado");
+  }
+});
+
 
     
     </script>
