Adição de menu usuário

--- a/public/html/cadastro.html
+++ b/public/html/cadastro.html
@@ -127,7 +127,7 @@
       <br> <br>
 
       <input type="submit" value="Cadastrar">
-      <h6 style="text-align:center; font-size: 12px;">Já possui conta? Faça <a href="../html/login.html">login</a>.</h6>
+      <h6 style="text-align:center; font-size: 12px;">Já possui conta? Faça <a href="login">login</a>.</h6>
     </form>
     </div>
   </div>
