--- a/public/html/index.html
+++ b/public/html/index.html
@@ -51,9 +51,9 @@ Free Bootstrap 5 HTML Template
 
 </head>
 
-<body id="section_1">
+<body>
 
-
+<div id ="section_1">
   <nav class="navbar navbar-expand-lg bg-white shadow-lg navbar-component-js">
     
   </nav>
@@ -266,7 +266,8 @@ Free Bootstrap 5 HTML Template
         </div>
       </div>
     </footer>
-
+</div>
+<div id="section_menu" style="position: absolute;top: 0px;left: 0px;"></div>
   <!-- JAVASCRIPT FILES -->
 <script src="../js/vagas.js"></script>
   <!--CABEÇALHO NAO MEXA-->
