--- a/public/html/login.html
+++ b/public/html/login.html
@@ -147,7 +147,7 @@
           <h6 style="text-align: center; font-size: 20px">
             Novo em Matricula-já?
             <font color="blue"
-              ><a href="../html/cadastro.html">Cadastre-se</a></font
+              ><a href="cadastro">Cadastre-se</a></font
             >.
           </h6>
         </form>
